# tasty-options-bot

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml  setup_env.sh
config/: account.yaml  execution.yaml  strategy.yaml  universe.yaml
data/: journal.jsonl
docs/plans/: 2026-05-25-tasty-options-credit-spread-bot.md
src/tasty_options_bot/: __init__.py  cli.py  config.py  dashboard.py  journal.py  models.py  option_chain.py  order_ticket.py  position_manager.py  reports.py  risk.py  scanner.py  scanner_diagnostics.py  spreads.py  strategy.py  tastytrade_market_data.py  tastytrade_option_chain.py
src/tasty_options_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tasty_options_bot/broker/: paper.py  tastytrade_client.py
tests/: test_cli_live_dry_run.py  test_config.py  test_dashboard.py  test_journal.py  test_manage_live_positions_cli.py  test_manage_manual_trade_cli.py  test_manual_trade_cli.py  test_option_chain.py  test_order_ticket.py  test_paper_broker.py  test_position_manager.py  test_reports.py  test_risk.py  test_scanner.py  test_scanner_diagnostics.py  test_spreads.py  test_strategy.py  test_tastytrade_client_auth.py  test_tastytrade_client_safety.py  test_tastytrade_device_challenge.py  test_tastytrade_env_config.py  test_tastytrade_market_data.py  test_tastytrade_option_chain.py
