[project]
name = "tasty-options-bot"
version = "0.1.0"
description = "Defined-risk tastytrade options bot for small accounts"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pandas>=2",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[project.scripts]
tasty-options-bot = "tasty_options_bot.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
